// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormatterModule should format documents 1`] = `
Array [
  Object {
    "newText": "text",
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`FormatterModule should format documents 2`] = `
Array [
  Object {
    "languageId": "bar",
    "uri": "foo",
  },
  Object {
    "config": Object {
      "rules": Object {
        "indentation": Array [
          2,
        ],
        "no-missing-end-of-source-newline": true,
      },
    },
  },
]
`;

exports[`FormatterModule with client dynamic registration support, onInitialize should not request static registration 1`] = `
Object {
  "capabilities": Object {
    "documentFormattingProvider": false,
  },
}
`;

exports[`FormatterModule without client dynamic registration support, onInitialize should request static registration 1`] = `
Object {
  "capabilities": Object {
    "documentFormattingProvider": true,
  },
}
`;
